--- a/trivias.html
+++ b/trivias.html
@@ -12,7 +12,7 @@
 
     <link href="Assets/css/bootstrap.css" rel="stylesheet" />
     <link href="Assets/css/style3.css" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="Assets/js/jquery.min.js"></script>
     <script src="Assets/js/bootstrap.js"></script>
 
 </head>
@@ -94,6 +94,87 @@
               <h1>He was already a terrific sculptor even at a very young age.</h1>
             </div>
           </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Jose Rizal’s “El Ermitaño.”</h1>
+            </div>
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia6.jpg" alt="sample33" />
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia7.jpg" alt="sample33" />
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Jose Rizal’s anti-Chinese sentiment.</h1>
+            </div>
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Rizal is regarded by many as the “Father of Philippine Comics” because of some humorous illustrations he made in Germany.</h1>
+            </div>
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia8.jpg" alt="sample33" />
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia9.jpg" alt="sample33" />
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Jose Rizal and the Christmas tree.</h1>
+            </div>
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Rizal was widely featured in cigarette wrappers. Most of these wrappers, made with Art Deco or Art Nouveau designs, were produced in Binondo during the turn-of-the-century. An old cigarette label, Las Delicias, even went to the extreme by featuring Rizal smoking a cigar.</h1>
+            </div>
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia10.jpg" alt="sample33" />
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia11.jpg" alt="sample33" />
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Not all of Rizal’s skeletal remains were buried under the monument in Luneta. A vertebra or a piece of the backbone where Rizal was allegedly hit by the bullet was claimed by his family and is now displayed at the Rizal Shrine, Fort Santiago.</h1>
+            </div>
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Jose Rizal’s last words.</h1>
+            </div>
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia12.jpg" alt="sample33" />
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia13.jpg" alt="sample33" />
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Rizal’s original execution photo features a dog, the mascot of the firing squad. It is said that the dog ran around the corpse whining after a soldier fired one last shot in Rizal’s head to make sure he was dead.</h1>
+            </div>
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>He left specific instructions on how he wanted to be treated after his death.</h1>
+            </div>
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia14.jpg" alt="sample33" />
+          </div>
+          <div class="column" style="background-color:#fff;">
+            <img src="Assets/images/trivia15.jpg" alt="sample33" />
+          </div>
+          <div class="column">
+            <div class="hideme">
+              <h1>Rizal’s execution led to the death of a Spanish Prime Minister. </h1>
+            </div>
+          </div>
+
       <div class="footer">
         Reference: https://filipiknow.net/jose-rizal-facts/
       </div>
