--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <link href="Assets/css/bootstrap.css" rel="stylesheet" />
       <link href="Assets/css/style.css" rel="stylesheet" />
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="Assets/js/jquery.min.js"></script>
     	<script src="Assets/js/bootstrap.js"></script>
 
   </head>
